# Machine-Learning-Freestanding

./: .gitattributes  CMakeLists.txt  README.md
include/LinearAlgebra/: LinearAlgebra.h  matrix.h  vector.h
include/slib/: definitions.h  io.h  maths.h  memory.h  slib.h  string.h
src/: main.c
src/LinearAlgebra/: CMakeLists.txt
src/LinearAlgebra/src/: matrix.c  vector-matrix.c  vector.c  vector.h
src/NeuralNetwork/: CMakeLists.txt
src/slib/: CMakeLists.txt
src/slib/src/io/: print.c  write.s
src/slib/src/maths/: sqrt.s
src/slib/src/memory/: allocate_memory.c  free.c  malloc.c  mmap.s  munmap.s
src/slib/src/runtime/: start.s
src/slib/src/string/: string_length.c  strlen.c
